プルリクエストの反映を確認

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
                                 <thead>
                                 <tr>
                                     <th>時間</th>
+                                    <th>プルリクエストの反映を確認</th>
                                     <th>内容</th>
                                 </tr>
                                 </thead>
